<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0ebd8"
    tools:context=".PlayersPage">

    <EditText
        android:id="@+id/players_page_name1"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="192dp"
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="textPersonName"
        android:shadowColor="#6200EC"
        android:textColorHighlight="#6200ED"
        android:textColorLink="#6200ED"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        android:textColor="#2ec4b6"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/players_page_name1"
        app:layout_constraintStart_toStartOf="@+id/players_page_name1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/PlayersPageTitle"
        android:textColor="#e71d36"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textColor="#ff9f1c"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/players_page_name2"
        app:layout_constraintStart_toStartOf="@+id/players_page_name2" />

    <EditText
        android:id="@+id/players_page_name2"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginTop="296dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:shadowColor="#6200EC"
        android:hint="@string/NameHint"
        android:textColorHighlight="#6200ED"
        android:textColorLink="#6200ED"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:onClick="SubmitBtnClick"
        android:text="@string/submitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        android:background="#ff9f1c"

        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>